feature/T5_docker_sonar integrate docker with sonar with github actions